--- a/Rakesh/RoboticEnterpriseFramework/project.json
+++ b/Rakesh/RoboticEnterpriseFramework/project.json
@@ -11,7 +11,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.4.4.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1-alpha",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
