--- a/vajrang/Week1Calculator_Reframework/project.json
+++ b/vajrang/Week1Calculator_Reframework/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Week1Calculator_Reframework",
   "description": "week 1 reframework",
-  "main": "Main.xaml",
+  "main": "Process.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.10.4]",
     "UiPath.System.Activities": "[21.4.1]",
@@ -43,6 +43,12 @@
     {
       "filePath": "Main.xaml",
       "uniqueId": "11ee3c64-4011-4afa-a71e-244ec520defb",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "Process.xaml",
+      "uniqueId": "8cfc6d7c-5b2d-443e-bfcf-21ac33ad8000",
       "input": [],
       "output": []
     }
