--- a/mayar/testingGit/RoboticEnterpriseFramework/project.json
+++ b/mayar/testingGit/RoboticEnterpriseFramework/project.json
@@ -1,10 +1,9 @@
 {
-  "name": "testingGit",
-  "description": "Blank Process",
+  "name": "RoboticEnterpriseFramework",
+  "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.11.0-preview]",
-    "UiPath.Mail.Activities": "[1.11.0-preview]",
     "UiPath.System.Activities": "[21.6.1-preview]",
     "UiPath.UIAutomation.Activities": "[21.6.1-preview]"
   },
@@ -44,7 +43,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0d6a22fd-ac07-4872-961a-18c919e952b3",
+      "uniqueId": "dad18948-a11f-420b-b095-e812ad326724",
       "input": [],
       "output": []
     }
