Calculator automation  process converted into reframework

--- a/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
+++ b/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\",\"Calculator/Calculator_OpenApplication.xaml\",\"Calculator/Calculator_PreformCalculations.xaml\",\"Process.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Framework/InitAllApplications.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
