--- a/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
+++ b/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Process.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Process.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
