--- a/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
+++ b/vajrang/Week1Calculator_Reframework/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Framework/InitAllApplications.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[]"}
