RE_Framework_Calculator_1

--- a/project.json
+++ b/project.json
@@ -1,10 +1,9 @@
 {
-  "name": "CalculatorWithArgumentsInSequence",
-  "description": "Blank Process",
+  "name": "RoboticEnterpriseFramework1Calculator",
+  "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.10.4]",
-    "UiPath.Mail.Activities": "[1.10.5]",
     "UiPath.System.Activities": "[21.4.1]",
     "UiPath.UIAutomation.Activities": "[21.4.4]"
   },
@@ -43,7 +42,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f71436d2-801e-4609-ba5f-e46709941917",
+      "uniqueId": "c6cf97c7-df68-48f7-ad66-54846c9422e3",
       "input": [],
       "output": []
     }
