--- a/Preethi/RoboticEnterpriseFramework1Calculator/.local/ProjectSettings.json
+++ b/Preethi/RoboticEnterpriseFramework1Calculator/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Framework/InitAllApplications.xaml\",\"Framework/CloseAllApplications.xaml\",\"Process.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}"}
+{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}","LibraryProjectSettings":"{\"IncludeSourcesByDefault\":true,\"CompileExpressions\":true,\"DefaultActivitiesRootCategories\":[null]}"}
