--- a/Shankar/Week1Calculator_Reframework/.local/ProjectSettings.json
+++ b/Shankar/Week1Calculator_Reframework/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Process.xaml\",\"Main.xaml\",\"Framework/InitAllApplications.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Framework/CloseAllApplications.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{\"Main.xaml\":[{\"ConditionalExpression\":null,\"ActionExpression\":null,\"ExpectedHitCounter\":null,\"ShouldContinueAfterAction\":false,\"IsEnabled\":false,\"ActivityIdRef\":\"If_11\",\"ActivityId\":\"1.164\",\"ActivityName\":\"Should Stop or Get Next\"}]}}"}
