Package calc week-1 poc (#79)
* commit

* created package, Pls commit

--- a/Shankar/Week1Calculator_Reframework/project.json
+++ b/Shankar/Week1Calculator_Reframework/project.json
@@ -1,10 +1,9 @@
 {
-  "name": "Shankar",
-  "description": "Blank Process",
-  "main": "POC-Demo-Reframework Project1.xaml",
+  "name": "Week1Calculator_Reframework",
+  "description": "week 1 reframework",
+  "main": "Process.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.10.4]",
-    "UiPath.Mail.Activities": "[1.10.5]",
     "UiPath.System.Activities": "[21.4.1]",
     "UiPath.UIAutomation.Activities": "[21.4.4]"
   },
@@ -12,7 +11,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.4.4.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
@@ -42,8 +41,14 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
-      "filePath": "POC-Demo-Reframework Project1.xaml",
-      "uniqueId": "c7ff4e56-077b-44c0-a7ad-82bc2ecc97cd",
+      "filePath": "Main.xaml",
+      "uniqueId": "11ee3c64-4011-4afa-a71e-244ec520defb",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "Process.xaml",
+      "uniqueId": "8cfc6d7c-5b2d-443e-bfcf-21ac33ad8000",
       "input": [],
       "output": []
     }
