updated Code of Client Security hash

--- a/Preethi/calculate_client_security_hash_2021_preethi/.local/ProjectSettings.json
+++ b/Preethi/calculate_client_security_hash_2021_preethi/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"System1/System1_login.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\"]"}
