Changes done to resolve Issues

--- a/GaneshSoley/Supplier_Onboarding/.local/ProjectSettings.json
+++ b/GaneshSoley/Supplier_Onboarding/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Process.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[{\"Id\":\"57132f68-2f14-41b2-b973-15c96ad09f5f\",\"Expression\":\"csvFileName\"}]}"}
+{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Main.xaml\",\"Process.xaml\",\"Supplier_Mgmt_System/Input_Supplier_Details.xaml\"]","ProjectWatches":"{\"Value\":[]}"}
