--- a/Purnima/Project UiPath/Calculator/.local/ProjectSettings.json
+++ b/Purnima/Project UiPath/Calculator/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\",\"Process.xaml\",\"Performer.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\",\"Performer.xaml\",\"Process.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
