--- a/Purnima/Week 3/Purchase Order/Purchase Order/.local/Purchase Order.nuget.props
+++ b/Purnima/Week 3/Purchase Order/Purchase Order/.local/Purchase Order.nuget.props
@@ -17,5 +17,6 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(ExcludeRestorePackageImports)' != 'true' ">
     <PkgMicrosoft_CodeAnalysis_Analyzers Condition=" '$(PkgMicrosoft_CodeAnalysis_Analyzers)' == '' ">C:\Users\PurnimaSambasivan\.nuget\packages\microsoft.codeanalysis.analyzers\3.0.0</PkgMicrosoft_CodeAnalysis_Analyzers>
+    <PkgUiPath_Mail_Activities Condition=" '$(PkgUiPath_Mail_Activities)' == '' ">C:\Users\PurnimaSambasivan\.nuget\packages\uipath.mail.activities\1.12.1</PkgUiPath_Mail_Activities>
   </PropertyGroup>
 </Project>
