--- a/Purnima/Week 3/Purchase Order/Purchase Order/project.json
+++ b/Purnima/Week 3/Purchase Order/Purchase Order/project.json
@@ -1,9 +1,10 @@
 {
   "name": "Purchase Order",
   "description": "Purchase Order Project",
-  "main": "Main.xaml",
+  "main": "PODispatcher.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.11.3]",
+    "UiPath.Mail.Activities": "[1.12.1]",
     "UiPath.System.Activities": "[21.10.0]",
     "UiPath.Testing.Activities": "[1.4.2]",
     "UiPath.UIAutomation.Activities": "[21.10.1]"
@@ -81,8 +82,8 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
-      "filePath": "Main.xaml",
-      "uniqueId": "9366bd7d-e437-456d-a38d-8235fae899ab",
+      "filePath": "PODispatcher.xaml",
+      "uniqueId": "cc95805c-445d-42b7-8e03-cd5962cac105",
       "input": [],
       "output": []
     }
