--- a/Purnima/Week 3/SalesOrganisation/.local/ProjectSettings.json
+++ b/Purnima/Week 3/SalesOrganisation/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","LibraryProjectSettings":"{\"IncludeSourcesByDefault\":true,\"CompileExpressions\":true,\"DefaultActivitiesRootCategories\":[null]}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"Process.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","LibraryProjectSettings":"{\"IncludeSourcesByDefault\":true,\"CompileExpressions\":true,\"DefaultActivitiesRootCategories\":[null]}","ProjectWatches":"{\"Value\":[]}"}
