--- a/Purnima/Week 3/Purchase Order/Purchase Order/project.json
+++ b/Purnima/Week 3/Purchase Order/Purchase Order/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Purchase Order",
   "description": "Blank Process",
-  "main": "PODispatcher.xaml",
+  "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.11.3]",
     "UiPath.Mail.Activities": "[1.12.1]",
@@ -44,8 +44,8 @@
   "expressionLanguage": "CSharp",
   "entryPoints": [
     {
-      "filePath": "PODispatcher.xaml",
-      "uniqueId": "7befe734-835d-402e-8301-38bb05dbbfe4",
+      "filePath": "Main.xaml",
+      "uniqueId": "fcc73c9b-a7fb-42ca-9d23-ba0f29912f5b",
       "input": [],
       "output": []
     }
