--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ vajrang/xratesProject/.settings/Debug/settings-82ca306a.json
 vajrang/xratesProject/.settings/Debug/settings-590bb27b.json
 vajrang/xratesProject/.settings/Debug/settings-5190454b.json
 vajrang/xratesProject/.settings/Debug/settings-1a5b880a.json
+*.json
