--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ vajrang/xratesProject/.settings/Debug/settings-590bb27b.json
 vajrang/xratesProject/.settings/Debug/settings-5190454b.json
 vajrang/xratesProject/.settings/Debug/settings-1a5b880a.json
 *.json
+Glory/FDA_API_Project/.objects/.metadata
+Glory/FDA_API_Project/.objects/.type
