updated seperate api project older

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ vajrang/xratesProject/.settings/Debug/settings-1a5b880a.json
 *.json
 Glory/FDA_API_Project/.objects/.metadata
 Glory/FDA_API_Project/.objects/.type
+vajrang/API Projecct/FDA_API_Project/.objects/.metadata
+vajrang/API Projecct/FDA_API_Project/.objects/.type
