--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Glory/FDA_API_Project/.objects/.metadata
 Glory/FDA_API_Project/.objects/.type
 vajrang/API Projecct/FDA_API_Project/.objects/.metadata
 vajrang/API Projecct/FDA_API_Project/.objects/.type
+Shivam/FDA_REF/.objects/.metadata
+Shivam/FDA_REF/.objects/.type
