--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Shivam/FDA_REF/.objects/.metadata
 Shivam/FDA_REF/.objects/.type
 Raju123/Day2 Project/.objects/.metadata
 Raju123/Day2 Project/.objects/.type
+vajrang/June 2022/CalculatorProject/Main.xaml
