--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Shivam/FDA_REF/.objects/.type
 Raju123/Day2 Project/.objects/.metadata
 Raju123/Day2 Project/.objects/.type
 vajrang/June 2022/CalculatorProject/Main.xaml
+
+.objects/
