Mainfile initial changes

--- a/SourceCode/2023/March2023/Kiran/LoginValidator/project.json
+++ b/SourceCode/2023/March2023/Kiran/LoginValidator/project.json
@@ -1,14 +1,18 @@
 {
-  "name": "ArithmeticOperations",
-  "description": "Blank Process",
+  "name": "LoginValidator",
+  "description": "Login Validator",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[22.10.4]"
+    "UiPath.Excel.Activities": "[2.18.0-preview]",
+    "UiPath.Mail.Activities": "[1.18.2]",
+    "UiPath.System.Activities": "[23.2.0-preview]",
+    "UiPath.Testing.Activities": "[23.2.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.2.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "22.12.0.0",
+  "studioVersion": "23.2.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -39,13 +43,13 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f1a362f1-3b94-44d5-a690-656080cc9dbf",
+      "uniqueId": "6e0dee56-e3fd-405e-95b5-18f3ee8f1315",
       "input": [],
       "output": []
     }
