created Division operation

--- a/SourceCode/2023/March2023/Division Operation/project.json
+++ b/SourceCode/2023/March2023/Division Operation/project.json
@@ -1,12 +1,11 @@
 {
-  "name": "LoginValidator",
-  "description": "Login Validator",
+  "name": "Division Operation",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.18.0-preview]",
     "UiPath.Mail.Activities": "[1.18.2]",
     "UiPath.System.Activities": "[23.2.0-preview]",
-    "UiPath.Testing.Activities": "[23.2.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.2.0-preview]"
   },
   "webServices": [],
@@ -49,7 +48,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "6e0dee56-e3fd-405e-95b5-18f3ee8f1315",
+      "uniqueId": "0c28afc8-63ad-489d-b41b-ad20f853d690",
       "input": [],
       "output": []
     }
