--- a/SourceCode/2023/March2023/Division Operation/project.json
+++ b/SourceCode/2023/March2023/Division Operation/project.json
@@ -6,6 +6,7 @@
     "UiPath.Excel.Activities": "[2.18.0-preview]",
     "UiPath.Mail.Activities": "[1.18.2]",
     "UiPath.System.Activities": "[23.2.0-preview]",
+    "UiPath.Testing.Activities": "[23.2.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.2.0-preview]"
   },
   "webServices": [],
@@ -42,13 +43,13 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0c28afc8-63ad-489d-b41b-ad20f853d690",
+      "uniqueId": "18787041-c177-4646-8c04-61f10261eb3f",
       "input": [],
       "output": []
     }
