--- a/SourceCode/2023/March2023/Task1/HaskKeyValidation/project.json
+++ b/SourceCode/2023/March2023/Task1/HaskKeyValidation/project.json
@@ -1,18 +1,18 @@
 {
-  "name": "MergePRocess_LoginValidator",
-  "description": "Merge process in GitHub",
+  "name": "HaskKeyValidation",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.18.0-preview]",
+    "UiPath.Excel.Activities": "[2.17.0-preview]",
     "UiPath.Mail.Activities": "[1.18.2]",
-    "UiPath.System.Activities": "[23.2.0-preview]",
-    "UiPath.Testing.Activities": "[23.2.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.2.0-preview]"
+    "UiPath.System.Activities": "[22.10.4]",
+    "UiPath.Testing.Activities": "[22.12.0-preview]",
+    "UiPath.UIAutomation.Activities": "[22.10.4]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.2.0.0",
+  "studioVersion": "22.12.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -21,7 +21,6 @@
     "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
-    "workflowSerialization": "DataContract",
     "excludedLoggedData": [
       "Private:*",
       "*password*"
@@ -49,7 +48,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "bb6eb64b-f6c7-474b-8ff7-6212c562178b",
+      "uniqueId": "7a85fb54-3633-44fb-afdf-0e2c9583a941",
       "input": [],
       "output": []
     }
