--- a/SourceCode/2023/March2023/Packages/ArithmeticOperations.1.0.2/content/project.json
+++ b/SourceCode/2023/March2023/Packages/ArithmeticOperations.1.0.2/content/project.json
@@ -40,6 +40,10 @@
     "fileInfoCollection": [],
     "modernBehavior": true
   },
+  "arguments": {
+    "input": [],
+    "output": []
+  },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
