--- a/SourceCode/2023/March2023/Packages/ArithmeticOperations.1.0.1/content/project.json
+++ b/SourceCode/2023/March2023/Packages/ArithmeticOperations.1.0.1/content/project.json
@@ -9,7 +9,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "22.12.0.0",
-  "projectVersion": "1.0.2",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -39,6 +39,10 @@
     },
     "fileInfoCollection": [],
     "modernBehavior": true
+  },
+  "arguments": {
+    "input": [],
+    "output": []
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
