Extra Folder Deleted.

--- a/SourceCode/2023/April2023/Week1/Calculator/project.json
+++ b/SourceCode/2023/April2023/Week1/Calculator/project.json
@@ -1,13 +1,13 @@
 {
   "name": "Calculator",
-  "description": "Blank Process",
+  "description": "Vajarang Day 3",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.16.2]",
+    "UiPath.Excel.Activities": "[2.20.0-preview]",
     "UiPath.Mail.Activities": "[1.18.2]",
-    "UiPath.System.Activities": "[22.10.5]",
-    "UiPath.Testing.Activities": "[22.10.3]",
-    "UiPath.UIAutomation.Activities": "[22.10.5]"
+    "UiPath.System.Activities": "[23.4.1-preview]",
+    "UiPath.Testing.Activities": "[23.4.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.4.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -43,13 +43,13 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true
+    "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c6e81e42-ccb9-4792-bce3-d98a92d89dae",
+      "uniqueId": "3e17d2b5-3af9-4c78-b87b-d9f8306f824c",
       "input": [],
       "output": []
     }
