--- a/SourceCode/2023/July2023/Vijitha/Bot1/project.json
+++ b/SourceCode/2023/July2023/Vijitha/Bot1/project.json
@@ -1,20 +1,20 @@
 {
-  "name": "APIProcess",
+  "name": "Bot1",
+  "projectId": "2523bb8d-752f-4bb8-a8f1-f5ec936d8ccf",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.19.0-preview]",
-    "UiPath.Mail.Activities": "[1.18.2]",
-    "UiPath.System.Activities": "[23.4.0-preview]",
-    "UiPath.Testing.Activities": "[23.4.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.2.0-preview]",
-    "UiPath.WebAPI.Activities": "[1.16.1-preview]"
+    "UiPath.Excel.Activities": "[2.21.0-preview]",
+    "UiPath.Mail.Activities": "[1.20.2]",
+    "UiPath.System.Activities": "[23.6.0-preview]",
+    "UiPath.Testing.Activities": "[23.6.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.4.0.0",
-  "projectVersion": "1.0.0",
+  "studioVersion": "23.6.1.0",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -44,13 +44,13 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true
+    "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "20140f78-b797-4cb7-a5f9-854c6f9ba2d7",
+      "uniqueId": "31c3240e-5222-422e-b87a-d330b44471c4",
       "input": [],
       "output": []
     }
