Sample Code Hello World in Studio

--- a/SourceCode/2023/July2023/Swathi/HelloWorld/project.json
+++ b/SourceCode/2023/July2023/Swathi/HelloWorld/project.json
@@ -1,19 +1,17 @@
 {
-  "name": "APIProcess",
+  "name": "HelloWorld",
+  "projectId": "5922c749-0a9a-4191-90e8-cea9848070b8",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.19.0-preview]",
-    "UiPath.Mail.Activities": "[1.18.2]",
-    "UiPath.System.Activities": "[23.4.0-preview]",
-    "UiPath.Testing.Activities": "[23.4.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.2.0-preview]",
-    "UiPath.WebAPI.Activities": "[1.16.1-preview]"
+    "UiPath.System.Activities": "[23.6.0-preview]",
+    "UiPath.Testing.Activities": "[23.6.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.4.0.0",
+  "studioVersion": "23.6.1.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -50,7 +48,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "20140f78-b797-4cb7-a5f9-854c6f9ba2d7",
+      "uniqueId": "18d6e6ef-006a-412a-bdc3-e2230132ee20",
       "input": [],
       "output": []
     }
