Deployed code to prod

--- a/SourceCode/2023/July2023/Swathi/HelloWorld/project.json
+++ b/SourceCode/2023/July2023/Swathi/HelloWorld/project.json
@@ -1,18 +1,15 @@
 {
   "name": "HelloWorld",
-  "projectId": "5922c749-0a9a-4191-90e8-cea9848070b8",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.6.0-preview]",
-    "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
+    "UiPath.System.Activities": "[23.6.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.6.1.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
