--- a/SourceCode/2023/July2023/Rajasekhar/Sample_HelloWorld/project.json
+++ b/SourceCode/2023/July2023/Rajasekhar/Sample_HelloWorld/project.json
@@ -1,5 +1,6 @@
 {
   "name": "Sample_HelloWorld",
+  "projectId": "4a40941c-b11f-4320-81dc-29feda848644",
   "description": "Creating A Sample Program to publish into GIT",
   "main": "Main.xaml",
   "dependencies": {
