--- a/SourceCode/2023/July2023/Rajasekhar/Sample_HelloWorld/project.json
+++ b/SourceCode/2023/July2023/Rajasekhar/Sample_HelloWorld/project.json
@@ -1,5 +1,6 @@
 {
   "name": "Sample_HelloWorld",
+  "projectId": "102e5f34-c20d-4a61-adcc-798c8ff3c22a",
   "description": "Creating A Sample Program to publish into GIT",
   "main": "Main.xaml",
   "dependencies": {
