--- a/SourceCode/2023/July2023/krishnaraj/challenge/project.json
+++ b/SourceCode/2023/July2023/krishnaraj/challenge/project.json
@@ -1,18 +1,19 @@
 {
-  "name": "HelloWorld",
+  "name": "challenge",
+  "projectId": "c62f1b0c-6ecd-49e4-87a6-868ebe439d34",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.20.2]",
-    "UiPath.Mail.Activities": "[1.20.0]",
-    "UiPath.System.Activities": "[23.4.3]",
-    "UiPath.Testing.Activities": "[23.4.1]",
-    "UiPath.UIAutomation.Activities": "[23.4.6]"
+    "UiPath.Excel.Activities": "[2.21.0-preview]",
+    "UiPath.Mail.Activities": "[1.20.2]",
+    "UiPath.System.Activities": "[23.6.0-preview]",
+    "UiPath.Testing.Activities": "[23.6.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.4.2.0",
+  "studioVersion": "23.6.1.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "bc4830ef-00cf-4a61-8f03-b5a73cf55906",
+      "uniqueId": "fef9fbaa-e719-4f61-83fb-59f50d8c4a1f",
       "input": [],
       "output": []
     }
