Deleted the Message Box

--- a/SourceCode/2023/July2023/Praveen/RPAChallange/project.json
+++ b/SourceCode/2023/July2023/Praveen/RPAChallange/project.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[2.21.0-preview]",
     "UiPath.Mail.Activities": "[1.20.2]",
-    "UiPath.System.Activities.Runtime.Windows": "[23.6.0-preview]",
+    "UiPath.System.Activities": "[23.6.0-preview]",
     "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities.Runtime": "[23.6.1-preview]"
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.6.1.0",
-  "projectVersion": "1.0.3",
+  "projectVersion": "1.0.5",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -45,10 +45,6 @@
     },
     "fileInfoCollection": [],
     "modernBehavior": true
-  },
-  "arguments": {
-    "input": [],
-    "output": []
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
