--- a/SourceCode/2023/July2023/Priya/Rpa_ChallengeProcess/project.json
+++ b/SourceCode/2023/July2023/Priya/Rpa_ChallengeProcess/project.json
@@ -5,8 +5,8 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.20.2]",
-    "UiPath.System.Activities": "[23.4.3]",
-    "UiPath.UIAutomation.Activities": "[23.4.7]"
+    "UiPath.System.Runtime.Windows": "[23.4.3]",
+    "UiPath.UIAutomation.Activities.Runtime": "[23.4.7]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -43,6 +43,10 @@
     },
     "fileInfoCollection": [],
     "modernBehavior": true
+  },
+  "arguments": {
+    "input": [],
+    "output": []
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
