--- a/SourceCode/2023/July2023/Rajasekhar/RPA Challenge_REFramework/project.json
+++ b/SourceCode/2023/July2023/Rajasekhar/RPA Challenge_REFramework/project.json
@@ -1,9 +1,11 @@
 {
   "name": "RPA Challenge_REFramework",
+  "projectId": "8330b2be-1799-41ab-9075-cba9602b059a",
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.20.2]",
+    "UiPath.Mail.Activities": "[1.20.0]",
     "UiPath.System.Activities": "[23.4.3]",
     "UiPath.Testing.Activities": "[23.4.1]",
     "UiPath.UIAutomation.Activities": "[23.4.7]"
@@ -12,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.4.3.0",
-  "projectVersion": "1.0.3",
+  "projectVersion": "1.0.4",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
