day 2 shashank data scrapping

--- a/SourceCode/2023/August2023/Shashank/datascrapping/project.json
+++ b/SourceCode/2023/August2023/Shashank/datascrapping/project.json
@@ -1,18 +1,20 @@
 {
-  "name": "Rpa_Challenge",
-  "projectId": "397fd5b8-84b9-4287-b24f-ca6549206d30",
-  "description": "Blank Process",
+  "name": "datascrapping",
+  "projectId": "9b44a05d-3488-4cfe-845b-be2682e34ea7",
+  "description": "Data Scrapping",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.20.2]",
-    "UiPath.System.Activities": "[23.4.3]",
-    "UiPath.UIAutomation.Activities": "[23.4.7]"
+    "UiPath.Excel.Activities": "[2.21.0-preview]",
+    "UiPath.Mail.Activities": "[1.20.2]",
+    "UiPath.System.Activities": "[23.6.0-preview]",
+    "UiPath.Testing.Activities": "[23.6.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.6.1.0",
-  "projectVersion": "1.0.2",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -48,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f4144b13-3c95-44bf-8f99-ec064ff15e1b",
+      "uniqueId": "91d2ef0d-dc2f-4eb5-968e-246456945ee3",
       "input": [],
       "output": []
     }
