vajrang day2 table extraction

--- a/SourceCode/2023/August2023/Vajrang/TableExtraction/project.json
+++ b/SourceCode/2023/August2023/Vajrang/TableExtraction/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "TableScrapping",
-  "projectId": "f7a0b005-502a-402b-bd38-a13502eca600",
+  "name": "TableExtraction",
+  "projectId": "9b8c3e87-5d63-4dcf-b0a1-4a3a9b733119",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "5753b900-279a-4bc8-93a8-d55e648fd385",
+      "uniqueId": "643ea7bb-01e9-4b5a-9375-34727d853c5c",
       "input": [],
       "output": []
     }
