Day 2 Table Extraction

--- a/SourceCode/2023/August2023/Deekshitha/Table Extraction/project.json
+++ b/SourceCode/2023/August2023/Deekshitha/Table Extraction/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "rpa challange",
-  "projectId": "2eea2c38-2dc5-4b47-8927-33d2ab4699b2",
+  "name": "Table Extraction",
+  "projectId": "eee36fc8-d650-4d1d-bd65-4a7b1f5243d5",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -8,13 +8,13 @@
     "UiPath.Mail.Activities": "[1.20.2]",
     "UiPath.System.Activities": "[23.6.0-preview]",
     "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.2-preview]"
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.6.1.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "a7ae5d1f-0df8-4a6c-97d4-c12ae0121aab",
+      "uniqueId": "796b137c-e1fb-4f89-b021-2242963f16f1",
       "input": [],
       "output": []
     }
