--- a/SourceCode/2023/August2023/Swapna/Task 6/project.json
+++ b/SourceCode/2023/August2023/Swapna/Task 6/project.json
@@ -1,19 +1,19 @@
 {
-  "name": "Table scrapping",
-  "projectId": "b8b13cf3-438a-44d6-8562-07ae097afca4",
+  "name": "Task 6",
+  "projectId": "5dea9124-6835-42e0-91fa-93d272c52a99",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.20.2]",
-    "UiPath.Mail.Activities": "[1.20.0]",
-    "UiPath.System.Activities": "[23.4.3]",
-    "UiPath.Testing.Activities": "[23.4.1]",
-    "UiPath.UIAutomation.Activities": "[23.4.6]"
+    "UiPath.Excel.Activities": "[2.21.0-preview]",
+    "UiPath.Mail.Activities": "[1.20.2]",
+    "UiPath.System.Activities": "[23.6.0-preview]",
+    "UiPath.Testing.Activities": "[23.6.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.4.2.0",
+  "studioVersion": "23.6.1.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f4a33a11-80b2-4e05-a206-9d63ebd2753e",
+      "uniqueId": "7f88a602-02f9-48b8-a01e-f2d2f9104066",
       "input": [],
       "output": []
     }
