--- a/SourceCode/2023/August2023/Charitha/API_Demo/project.json
+++ b/SourceCode/2023/August2023/Charitha/API_Demo/project.json
@@ -4,11 +4,9 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.21.0-preview]",
-    "UiPath.Mail.Activities": "[1.20.2]",
-    "UiPath.System.Activities": "[23.6.0-preview]",
-    "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.1-preview]",
+    "UiPath.System.Activities": "[23.4.4]",
+    "UiPath.Testing.Activities": "[23.4.1]",
+    "UiPath.UIAutomation.Activities": "[23.4.8]",
     "UiPath.WebAPI.Activities": "[1.16.2]"
   },
   "webServices": [],
