--- a/SourceCode/2023/August2023/Lavanya/APItrail/project.json
+++ b/SourceCode/2023/August2023/Lavanya/APItrail/project.json
@@ -4,11 +4,9 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.0-preview]",
-    "UiPath.Mail.Activities": "[1.20.3]",
-    "UiPath.System.Activities": "[23.8.1-preview]",
-    "UiPath.Testing.Activities": "[23.8.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.2-preview]",
+    "UiPath.System.Activities": "[23.4.4]",
+    "UiPath.Testing.Activities": "[23.4.1]",
+    "UiPath.UIAutomation.Activities": "[23.4.8]",
     "UiPath.WebAPI.Activities": "1.16.2"
   },
   "webServices": [],
