--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,3 +9,9 @@ trigger:
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
+- task: UiPathRunJob@3
+  inputs:
+    orchestratorConnection: 'UiPath Test Connection'
+    processName: 'crossplatform'
+    folderName: 'Shared'
+    traceLevel: 'Verbose'
