--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,8 @@
 trigger:
 - main
 
+pool: Default
+
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
-- task: UiPathRunJob@3
-  inputs:
-    orchestratorConnection: 'UiPath Test Connection'
-    processName: 'crossplatform'
-    folderName: 'Shared'
-    traceLevel: 'Verbose'
