Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,3 +11,9 @@ pool: Default
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
+
+- task: UiPathRunJob@3
+  inputs:
+    orchestratorConnection: 'UiPath Test Connection'
+    processName: 'crossplatform'
+    folderName: 'Shared'
