Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,3 +11,10 @@ pool: Default
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
+- task: UiPathRunJob@3
+  inputs:
+    orchestratorConnection: 'UiPath Test Connection'
+    processName: 'vajrang_logtime'
+    folderName: 'Shared'
+    strategy: 'Specific'
+    robotsIds: 'laptop-k4bgskpc\yesav'
