Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
     processName: 'vajrang_logtime'
     folderName: 'Shared'
     strategy: 'Specific'
-    robotsIds: 'laptop-k4bgskpc\yesav'
+    robotsIds: 'laptop-k4bgskpc\\yesav'
