Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,9 @@ steps:
     orchestratorConnection: 'UiPath Test Connection'
     processName: 'vajrang_logtime'
     folderName: 'Shared'
+- task: CmdLine@2
+  inputs:
+    script: |
+      echo Write your commands here
+      
+      echo Hello world
