--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,11 @@ steps:
   inputs:
     script: |
       echo Write your commands here
-      
       echo Hello world
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+      Write-Host "Hello World"
