Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,9 @@ steps:
       # Write your PowerShell commands here.
       
       Write-Host "Hello World"
+- task: GitHubComment@0
+  inputs:
+    gitHubConnection: 'vajrang-b'
+    repositoryName: 'RPA-Developer-in-30-Days'
+    id: '904'
+    comment: 'Hi from pipeline'
