Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,11 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
   
-- task: UiPathRunJob@3
-  inputs:
-    orchestratorConnection: 'UiPath Test Connection'
-    processName: 'vajrang_logtime'
-    folderName: 'Shared'
+# - task: UiPathRunJob@3
+#   inputs:
+#     orchestratorConnection: 'UiPath Test Connection'
+#     processName: 'vajrang_logtime'
+#     folderName: 'Shared'
 - task: CmdLine@2
   inputs:
     script: |
