Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     script: |
       echo Write your commands here
       echo Hello world
-      echo "Pull Request ID: $(System.PullRequest.PullRequestId)"
+      echo $(System.PullRequest.PullRequestId)
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
