Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,4 +35,4 @@ steps:
     gitHubConnection: 'vajrang-b'
     repositoryName: 'vajrang-b/RPA-Developer-in-30-Days'
     id: $(System.PullRequest.PullRequestNumber)
-    comment: 'Hi from pipeline'
+    comment: 'Congratulations on creating a pr, your code will be reviewed soon'
