--- a/SourceCode/2023/August2023/Charitha/Roboyo-Invoice Extraction-05-09-2023/project.json
+++ b/SourceCode/2023/August2023/Charitha/Roboyo-Invoice Extraction-05-09-2023/project.json
@@ -4,13 +4,12 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.AdobePdfServices.IntegrationService.Activities": "[4.0.6]",
-    "UiPath.Excel.Activities": "[2.21.0-preview]",
-    "UiPath.OCR.Activities": "[3.16.0-preview]",
-    "UiPath.PDF.Activities": "[3.15.0-preview]",
-    "UiPath.System.Activities": "[23.6.0-preview]",
-    "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
+    "UiPath.Excel.Activities": "[2.20.3]",
+    "UiPath.OCR.Activities": "[3.15.1]",
+    "UiPath.PDF.Activities": "[3.14.1]",
+    "UiPath.System.Activities": "[23.4.4]",
+    "UiPath.Testing.Activities": "[23.4.1]",
+    "UiPath.UIAutomation.Activities": "[23.4.8]"
   },
   "webServices": [],
   "entitiesStores": [],
