--- a/SourceCode/2023/August2023/Charitha/Roboyo-Invoice Extraction-05-09-2023/project.json
+++ b/SourceCode/2023/August2023/Charitha/Roboyo-Invoice Extraction-05-09-2023/project.json
@@ -4,7 +4,7 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.20.3]",
+    "UiPath.Excel.Activities": "[2.22.0-preview]",
     "UiPath.OCR.Activities": "[3.15.1]",
     "UiPath.PDF.Activities": "[3.14.1]",
     "UiPath.System.Activities": "[23.4.4]",
