--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -11,6 +11,7 @@ pool: CloudVM
 
 steps:
 - script: echo Hello, world!
+- script: echo $(Build.SourceVersion)
 - script: echo $(githubPat)
   displayName: 'Run a one-line script'
   
