--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -19,8 +19,8 @@ steps:
   displayName: 'Run a one-line script'
 
 - powershell: |
-    Write-Output 'https://api.github.com/repos/vajrang-b/RPA-Developer-in-30-Days/commits/$(MyCustomVar)'
-    $response = Invoke-WebRequest -Uri 'https://api.github.com/repos/vajrang-b/RPA-Developer-in-30-Days/commits/$(MyCustomVar)' -Method GET -Headers @{ "Authorization" = "Bearer $(githubPat)" } 
+    Write-Output 'https://api.github.com/repos/vajrang-b/RPA-Developer-in-30-Days/commits/'$(MyCustomVar)
+    $response = Invoke-WebRequest -Uri 'https://api.github.com/repos/vajrang-b/RPA-Developer-in-30-Days/commits/'$(MyCustomVar) -Method GET -Headers @{ "Authorization" = "Bearer $(githubPat)" } 
     Write-Output $response.Content
   displayName: 'Make HTTP Request with PowerShell'
   
