--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -31,7 +31,7 @@ steps:
     }
     
     $response = Invoke-RestMethod -Uri $uri -Method GET -Headers $headers
-    Write-Output $response
+    Write-Output $response.files
   displayName: 'Make HTTP Request with PowerShell'
   env:
     GITHUB_PAT: $(githubPat)
