--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -3,9 +3,9 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-# trigger:
+trigger:
 # - main
-# - pull_request
+ - pull_request
 
 pool: CloudVM
 
