--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -36,6 +36,11 @@ steps:
   env:
     GITHUB_PAT: $(githubPat)
 
+- task: PowerShell@2
+         displayName: 'PowerShell Script'
+         inputs:
+           targetType: filePath
+           filePath: './Scripts/validator.ps1'
   
 # - task: UiPathRunJob@3
 #   inputs:
